--- a/transacsmonster/src/App.css
+++ b/transacsmonster/src/App.css
@@ -1,21 +1,21 @@
 .App {
-  text-align: center;
+  text-align: justify;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #abc123;
+  min-height: 3vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: left;
+  justify-content: left;
+  font-size: calc(3px + 2vmin);
   color: white;
 }
 
